--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 <title></title>
 </head>
-<body>
+<body id="body">
     <script src="script.js"></script>
 </body>
 </html>
