added HTML element structures

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
 <title></title>
 </head>
 <body id="body">
+    <header>
+        <div id="banner-wrapper">
+            <img id="logo-img" src="" alt="logo">
+            <h1 id="logo-title">fCC and anavguitar present...Palindrome Checker</h1>
+        </div>
+    </header>
+    <main>
+        <section id="palindrome-section">
+            <p>Enter text below to check if it's a palindrome</p>
+            <div class="txt-btn-wrapper">
+            <input id="text-input" type="text" required>
+            <button id="check-btn" type="button">Check Here!</button>
+            </div>
+            </section>
+        <section id="faq-section">
+            <div class="faq-txt-wrapper">
+            <p>You might be asking, what is a palindrome? 
+                A palindrome a word, number, phrase, or 
+                other sequence of symbols that reads the 
+                same backwards as forwards. Click the button
+                below for a few famous examples!</p>
+            </div>
+            <div class="rand-palin-gen-wrapper">
+                <button>Push For A Palindrome!</button>
+                <h2></h2>
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
