added some more HTML element structures and some CSS styles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body id="body">
     <header>
         <div id="banner-wrapper">
-            <img id="logo-img" src="" alt="logo">
-            <h1 id="logo-title">fCC and anavguitar present...Palindrome Checker</h1>
+            <!-- <img id="logo-img" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="logo"> -->
+            <h1 id="logo-title"><span id="logo-span-one">A freeCodeCamp</span> and <span id="logo-span-two">anAvGuitar</span> joint...</h1>    
+            <h1 id="logo-span-three">Palindrome Checker!</h1>
         </div>
     </header>
     <main>
@@ -19,6 +20,7 @@
             <div class="txt-btn-wrapper">
             <input id="text-input" type="text" required>
             <button id="check-btn" type="button">Check Here!</button>
+            <h2 id="result"></h2>
             </div>
             </section>
         <section id="faq-section">
@@ -26,12 +28,14 @@
             <p>You might be asking, what is a palindrome? 
                 A palindrome a word, number, phrase, or 
                 other sequence of symbols that reads the 
-                same backwards as forwards. Click the button
-                below for a few famous examples!</p>
-            </div>
-            <div class="rand-palin-gen-wrapper">
-                <button>Push For A Palindrome!</button>
-                <h2></h2>
+                same backwards as forwards. Here are a few examples: 
+            </p>
+            <ul>
+                <ol>noon</ol>
+                <ol>mom</ol>
+                <ol>Do Geese See God</ol>
+                <ol>If I</ol>
+            </ul>
             </div>
         </section>
     </main>
