consolidated HTML element structures, added JS const vars and the palindromeChecker(), added some more CSS styles

--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
-<title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title></title>
 </head>
+
 <body id="body">
-    <header>
-        <div id="banner-wrapper">
+    <header id="banner-wrapper">
             <!-- <img id="logo-img" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="logo"> -->
-            <h1 id="logo-title"><span id="logo-span-one">A freeCodeCamp</span> and <span id="logo-span-two">anAvGuitar</span> joint...</h1>    
+            <h1 id="logo-title"><span id="logo-span-one">A freeCodeCamp</span> and <span
+                    id="logo-span-two">anAvGuitar</span> joint...</h1>
             <h1 id="logo-span-three">Palindrome Checker!</h1>
-        </div>
     </header>
     <main>
         <section id="palindrome-section">
             <p>Enter text below to check if it's a palindrome</p>
             <div class="txt-btn-wrapper">
-            <input id="text-input" type="text" required>
-            <button id="check-btn" type="button">Check Here!</button>
-            <h2 id="result"></h2>
+                <input id="text-input" type="text" required>
+                <button id="check-btn" type="button">Check Here!</button>
+                <h2 id="result"></h2>
             </div>
-            </section>
+        </section>
         <section id="faq-section">
-            <div class="faq-txt-wrapper">
-            <p>You might be asking, what is a palindrome? 
-                A palindrome a word, number, phrase, or 
-                other sequence of symbols that reads the 
-                same backwards as forwards. Here are a few examples: 
-            </p>
-            <ul>
-                <ol>noon</ol>
-                <ol>mom</ol>
-                <ol>Do Geese See God</ol>
-                <ol>If I</ol>
-            </ul>
-            </div>
+                <p class="faq-para">You might be asking, what is a palindrome?
+                    A palindrome a word, number, phrase, or<br>
+                    other sequence of symbols that reads the
+                    same backwards as forwards. Here are a few examples:<br> 
+                </p>
+                <ul class="faq-list">
+                    <ol>noon</ol>
+                    <ol>mom</ol>
+                    <ol>Do Geese See God</ol>
+                    <ol>If I</ol>
+                </ul>
         </section>
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
