--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Palindrome Checker</title>
 </head>
 
 <body id="body">
@@ -21,7 +21,7 @@
             <div class="txt-btn-wrapper">
                 <input id="text-input" type="text" required>
                 <button id="check-btn" type="button">Check Here!</button>
-                <h2 id="result"></h2>
+                <div id="result"></div>
             </div>
         </section>
         <section id="faq-section">
