added some CSS  animation- keyframes rules for some text-shadow effects, added some borders to sections, fixed the ul bugs as well

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section id="palindrome-section">
-            <p>Enter text below to check if it's a palindrome</p>
+            <p id="color-shadow-animation">Enter text below to check if it's a palindrome</p>
             <div class="txt-btn-wrapper">
                 <input id="text-input" type="text" required>
                 <button id="check-btn" type="button">Check Here!</button>
@@ -31,10 +31,10 @@
                     same backwards as forwards. Here are a few examples:<br> 
                 </p>
                 <ul class="faq-list">
-                    <ol>noon</ol>
-                    <ol>mom</ol>
-                    <ol>Do Geese See God</ol>
-                    <ol>If I</ol>
+                    <li>noon</li>
+                    <li>mom</li>
+                    <li>Do Geese See God</li>
+                    <li>If I</li>
                 </ul>
         </section>
     </main>
