--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="body">
     <header id="banner-wrapper">
             <!-- <img id="logo-img" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="logo"> -->
-            <h1 id="logo-title"><span id="logo-span-one">A freeCodeCamp</span> and <span
+            <h1 id="logo-title">A<span id="logo-span-one"> freeCodeCamp</span> and <span
                     id="logo-span-two">anAvGuitar</span> joint...</h1>
             <h1 id="logo-span-three">Palindrome Checker!</h1>
     </header>
