--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section id="faq-section">
                 <p class="faq-para">You might be asking, what is a palindrome?
-                    A palindrome a word, number, phrase, or<br>
+                    A palindrome is a word, number, phrase, or<br>
                     other sequence of symbols that reads the
                     same backwards as forwards. Here are a few examples:<br> 
                 </p>
